--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -6,9 +6,9 @@
 - type: twitter
   icon: "fa-brands fa-x-twitter"
 
-- type: email
-  icon: "fas fa-envelope"
-  noblank: true # open link in current tab
+- type: linkedin
+  icon: "fab fa-linkedin"
+  url: "https://www.linkedin.com/in/robertocastro3/"
 
 - type: rss
   icon: "fas fa-rss"
