updated contact info

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,16 +3,20 @@
 - type: github
   icon: "fab fa-github"
 
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
-
 - type: linkedin
   icon: "fab fa-linkedin"
   url: "https://www.linkedin.com/in/robertocastro3/"
 
-- type: rss
-  icon: "fas fa-rss"
-  noblank: true
+- type: stack-overflow
+  icon: 'fab fa-stack-overflow'
+  url:  'https://stackoverflow.com/users/19119415/rocast'               
+
+  
+- type: twitter
+  icon: "fa-brands fa-x-twitter"
+# - type: rss
+#   icon: "fas fa-rss"
+#   noblank: true
 # Uncomment and complete the url below to enable more contact options
 #
 # - type: mastodon
@@ -23,9 +27,7 @@
 #   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
 #   url:  ''                  # Fill with your Linkedin homepage
 #
-# - type: stack-overflow
-#   icon: 'fab fa-stack-overflow'
-#   url:  ''                  # Fill with your stackoverflow homepage
+
 #
 # - type: bluesky
 #   icon: 'fa-brands fa-bluesky'
